examples/ex3/test_cases/failing/check22_array_access_to_non_int_index.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    boolean field;

    public int func() {
        int[] array;
        int num;

        array = new int[4];

        num = array[field];

        return 0;
    }
}